logs/grill-names.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/grill'...
Listing './lib/python3.5/site-packages/grill/names'...
Listing './lib/python3.5/site-packages/grill_names-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/naming'...
Compiling './lib/python3.5/site-packages/naming/__init__.py'...
***   File "./lib/python3.5/site-packages/naming/__init__.py", line 62
    setattr(self, rf'_{k}', v)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/naming/base.py'...
***   File "./lib/python3.5/site-packages/naming/base.py", line 8
    pattern = getattr(self, rf'__{field_name}')
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/naming-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
